exam02_prove_you_learned_something/4-1-sort_list.trace.txt
= Host-specific information ====================================================
$> hostname; uname -msr
e1r10p16.42.fr
Darwin 15.6.0 x86_64
$> date
Fri Aug 19 21:51:17 CEST 2016
$> gcc --version
Configured with: --prefix=/Applications/Xcode.app/Contents/Developer/usr --with-gxx-include-dir=/usr/include/c++/4.2.1
Apple LLVM version 7.3.0 (clang-703.0.31)
Target: x86_64-apple-darwin15.6.0
Thread model: posix
InstalledDir: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin
$> clang --version
Apple LLVM version 7.3.0 (clang-703.0.31)
Target: x86_64-apple-darwin15.6.0
Thread model: posix
InstalledDir: /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin

= User files collection ========================================================
Collecting user files from Vogsphere
Repository URL: auto-exam/2016/piscine-c-exam02/exam_20160819/pichrist

= Git history ==================================================================
$> git -C /var/folders/0v/xv846by50cz926g9gtsp4yf80000gq/T/tmpMpLeWT/user log --pretty='%H - %an, %ad : %s'
8fd5ea810e66cfb86e96e5823b37fa887cec8fba - Exam 42, Fri Aug 19 21:51:08 2016 +0200 : sort list
62b05165a28ebbe3f9958086938cc6d4b57b0e60 - Exam 42, Fri Aug 19 21:33:48 2016 +0200 : itoa
15535f43525d8f593d789c2ab0ac1c527f210854 - Exam 42, Fri Aug 19 21:07:50 2016 +0200 : pgcd
3f4324fa81242c7fb7eaa8e9ba3c33e4d88c750a - Exam 42, Fri Aug 19 20:47:26 2016 +0200 : rrange
61ab036ebd215fa87ba17ac5d66000e394cd12ec - Exam 42, Fri Aug 19 20:16:02 2016 +0200 : add truc
f80bb38dc346ac104dbe9bd0cc1d668d4bd02b74 - Exam 42, Fri Aug 19 19:29:37 2016 +0200 : inter
a12993085e7c87a26d6f2a2186388e5085a9ae9a - Exam 42, Fri Aug 19 18:24:21 2016 +0200 : ftstrlen
27f2eb569772449b23a36b2c52aed2af3177ac34 - Exam 42, Fri Aug 19 18:20:43 2016 +0200 : strcpy
ad620b87647b9170d99f3177a7b4ddae9d821cc4 - Exam 42, Fri Aug 19 18:05:11 2016 +0200 : hello
 
= Collected files ==========================================
$> ls -lAR /var/folders/0v/xv846by50cz926g9gtsp4yf80000gq/T/tmpMpLeWT/user
total 8
-rw-r--r--  1 deepthought  deepthought  2104 Aug 19 21:51 __GIT_HISTORY
drwxr-xr-x  3 deepthought  deepthought   102 Aug 19 21:51 add_prime_sum
drwxr-xr-x  3 deepthought  deepthought   102 Aug 19 21:51 ft_itoa
drwxr-xr-x  3 deepthought  deepthought   102 Aug 19 21:51 ft_rrange
drwxr-xr-x  3 deepthought  deepthought   102 Aug 19 21:51 ft_strcpy
drwxr-xr-x  3 deepthought  deepthought   102 Aug 19 21:51 ft_strlen
drwxr-xr-x  3 deepthought  deepthought   102 Aug 19 21:51 hello
drwxr-xr-x  3 deepthought  deepthought   102 Aug 19 21:51 inter
drwxr-xr-x  3 deepthought  deepthought   102 Aug 19 21:51 pgcd
drwxr-xr-x  3 deepthought  deepthought   102 Aug 19 21:51 sort_list

/var/folders/0v/xv846by50cz926g9gtsp4yf80000gq/T/tmpMpLeWT/user/add_prime_sum:
total 8
-rw-r--r--  1 deepthought  deepthought  1585 Aug 19 21:51 add_prime_sum.c

/var/folders/0v/xv846by50cz926g9gtsp4yf80000gq/T/tmpMpLeWT/user/ft_itoa:
total 8
-rw-r--r--  1 deepthought  deepthought  1390 Aug 19 21:51 ft_itoa.c

/var/folders/0v/xv846by50cz926g9gtsp4yf80000gq/T/tmpMpLeWT/user/ft_rrange:
total 8
-rw-r--r--  1 deepthought  deepthought  1268 Aug 19 21:51 ft_rrange.c

/var/folders/0v/xv846by50cz926g9gtsp4yf80000gq/T/tmpMpLeWT/user/ft_strcpy:
total 8
-rw-r--r--  1 deepthought  deepthought  986 Aug 19 21:51 ft_strcpy.c

/var/folders/0v/xv846by50cz926g9gtsp4yf80000gq/T/tmpMpLeWT/user/ft_strlen:
total 8
-rw-r--r--  1 deepthought  deepthought  970 Aug 19 21:51 ft_strlen.c

/var/folders/0v/xv846by50cz926g9gtsp4yf80000gq/T/tmpMpLeWT/user/hello:
total 8
-rw-r--r--  1 deepthought  deepthought  974 Aug 19 21:51 hello.c

/var/folders/0v/xv846by50cz926g9gtsp4yf80000gq/T/tmpMpLeWT/user/inter:
total 8
-rw-r--r--  1 deepthought  deepthought  1413 Aug 19 21:51 inter.c

/var/folders/0v/xv846by50cz926g9gtsp4yf80000gq/T/tmpMpLeWT/user/pgcd:
total 8
-rw-r--r--  1 deepthought  deepthought  1364 Aug 19 21:51 pgcd.c

/var/folders/0v/xv846by50cz926g9gtsp4yf80000gq/T/tmpMpLeWT/user/sort_list:
total 8
-rw-r--r--  1 deepthought  deepthought  1299 Aug 19 21:51 sort_list.c
 
= sort_list ====================================================================
$> clang -Wextra -Wall -Werror sort_list.c main.c -o user_exe 
sort_list.c:28:5: error: variable 'tmp' is uninitialized when used here [-Werror,-Wuninitialized]
                                tmp->data = lst->next->data;
                                ^~~
sort_list.c:17:13: note: initialize the variable 'tmp' to silence this warning
        t_list  *tmp;
                    ^
                     = 0
1 error generated.

Could not compile 'user_exe'
Grade: 0

= Final grade: 0 ===============================================================
